templates/ibm-datastage-security.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "This DataStage template deploys DataStage Server in two private subnets. This template creates EC2 instances and related resources. You will be billed for the AWS resources used if you create a stack from this template.",
    "Parameters": {
        "AllowedPublicCIDR": {
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Description": "The CIDR IP range that is permitted to access the cluster. We recommend that you set this value to a trusted IP range.",
            "Type": "String"
        },
        "BastionSecurityGroupID": {
            "Description": "ID of the security group attached to the SSH bastion instance of the VPC",
            "Type": "AWS::EC2::SecurityGroup::Id"
        },
        "DSClientEIP": {
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})",
            "ConstraintDescription": "IP address must be in the form x.x.x.x",
            "Description": "IP address of the EIP attached to the DataStage Client",
            "Type": "String"
        },
        "NumberOfAZs": {
            "AllowedValues": [
                "2",
                "3"
            ],
            "Default": "3",
            "Description": "Number of Availability Zones to use in the VPC. This must match the number of selections in the Availability Zones parameter.",
            "Type": "String"
        },
        "ResourceTag": {
            "AllowedPattern": "[a-z0-9]+",
            "ConstraintDescription": "Non-empty; lower case letters and numbers",
            "Default": "ds1",
            "Description": "Will be used for naming resources and the DataStage Kubernetes namespace. Ensure that every deployment on your AWS account uses a unique Order ID.",
            "Type": "String"
        },
        "PrivateSubnet1CIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "10.0.0.0/19",
            "Description": "The CIDR block for the private subnet located in Availability Zone 1",
            "Type": "String"
        },
        "PrivateSubnet2CIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "10.0.32.0/19",
            "Description": "The CIDR block for the private subnet located in Availability Zone 2",
            "Type": "String"
        },
        "PrivateSubnet3CIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "10.0.64.0/19",
            "Description": "The CIDR block for the private subnet located in Availability Zone 3",
            "Type": "String"
        },
        "VPCCIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "10.0.0.0/16",
            "Description": "The CIDR block of the VPC",
            "Type": "String"
        },
        "VPCID": {
            "Description": "ID of your existing VPC for deployment",
            "Type": "AWS::EC2::VPC::Id"
        }
    },
    "Conditions": {
        "3AZCondition": {
            "Fn::Equals": [
                { "Ref": "NumberOfAZs" },
                "3"
            ]
        }
    },
    "Resources": {
        "DataStageClientSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Allow RDP access to the DataStage Client instances",
                "GroupName": { "Fn::Sub": "${ResourceTag}-DSClientSG" },
                "VpcId": { "Ref": "VPCID" },
                "SecurityGroupIngress": [
                    { "IpProtocol": "tcp", "FromPort": 3389, "ToPort": 3389, "CidrIp": { "Ref": "AllowedPublicCIDR" } }
                ]
            }
        },
        "MountTargetSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": { "Ref": "VPCID" },
                "GroupDescription": "Security group for mount target",
                "GroupName": { "Fn::Sub": "${ResourceTag}-MountTargetSG" },
                "SecurityGroupIngress": [
                    { "IpProtocol": "tcp", "FromPort": 2049, "ToPort": 2049, "SourceSecurityGroupId": { "Ref": "ClusterNodeSecurityGroup" } }
                ]
            }
        },
        "ClusterNodeSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": { "Ref": "VPCID" },
                "GroupDescription": "Common security group for all instances in the Kubernetes cluster",
                "GroupName": { "Fn::Sub": "${ResourceTag}-ClusterNodeSG" },
                "SecurityGroupIngress": [
                    { "IpProtocol": "tcp", "FromPort": 22, "ToPort": 22, "SourceSecurityGroupId": { "Ref": "BastionSecurityGroupID" } },
                    { "IpProtocol": "tcp", "FromPort": 22, "ToPort": 22, "SourceSecurityGroupId": { "Ref": "DataStageClientSecurityGroup" } },
                    { "IpProtocol": "-1", "CidrIp": { "Ref": "PrivateSubnet1CIDR" } },
                    { "IpProtocol": "-1", "CidrIp": { "Ref": "PrivateSubnet2CIDR" } }
                ]
            }
        },
        "ClusterNodeSGConditionalIngressRule": {
            "Condition": "3AZCondition",
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": { "Ref": "ClusterNodeSecurityGroup" },
                "IpProtocol": "-1",
                "CidrIp": { "Ref": "PrivateSubnet3CIDR" }
            }
        },
        "MasterNodeAddonSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": { "Ref": "VPCID" },
                "GroupDescription": "Security group specific to Master instances in the Kubernetes cluster",
                "GroupName": { "Fn::Sub": "${ResourceTag}-MasterNodeAddonSG" },
                "SecurityGroupIngress": [
                    { "IpProtocol": "tcp", "FromPort": 32500, "ToPort": 32502, "CidrIp": { "Ref": "AllowedPublicCIDR" } },
                    { "IpProtocol": "tcp", "FromPort": 32500, "ToPort": 32502, "CidrIp": { "Ref": "VPCCIDR" } },
                    { "IpProtocol": "tcp", "FromPort": 32500, "ToPort": 32502, "CidrIp": { "Fn::Sub": "${DSClientEIP}/32" } }
                ]
            }
        }
    },
    "Outputs": {
        "DataStageClientSecurityGroupID": {
            "Value": { "Ref": "DataStageClientSecurityGroup" }
        },
        "MountTargetSecurityGroupID": {
            "Value": { "Ref": "MountTargetSecurityGroup" }
        },
        "ClusterNodeSecurityGroupID": {
            "Value": { "Ref": "ClusterNodeSecurityGroup" }
        },
        "MasterNodeAddonSecurityGroupID": {
            "Value": { "Ref": "MasterNodeAddonSecurityGroup" }
        },
    }
}
